Update ASSIGNMENT DAY 2.ipynb

--- a/ASSIGNMENT DAY 2.ipynb
+++ b/ASSIGNMENT DAY 2.ipynb
@@ -282,10 +282,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cherry', 'banana', 'strwbeery', 'apple'}\n",
-      "{'cherry', 'banana', 'strwbeery', 'apple'}\n",
-      "{'cherry', 'banana', 'strwbeery'}\n",
-      "{'strwbeery', 'cherry', 'banana', 'orange', 'mango', 'apple'}\n",
+      "{'cherry', 'banana', 'strawbeery', 'apple'}\n",
+      "{'cherry', 'banana', 'strawbeery', 'apple'}\n",
+      "{'cherry', 'banana', 'strawbeery'}\n",
+      "{'strawbeery', 'cherry', 'banana', 'orange', 'mango', 'apple'}\n",
       "set()\n"
      ]
     }
@@ -295,7 +295,7 @@
     "fruits1={'mango','orange','apple'}\n",
     "\n",
     "#add function\n",
-    "fruits.add('strwbeery')\n",
+    "fruits.add('strawbeery')\n",
     "print(fruits)\n",
     "\n",
     "#copy function\n",
